[gd_scene load_steps=5 format=2]

[ext_resource path="res://Code/Character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Artwork/Diner.png" type="Texture" id=2]
[ext_resource path="res://Code/Diner/Diner.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 63.2823, 298.171 )

[node name="Diner" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.953369, 299.826 )
scale = Vector2( 0.5, 0.559129 )
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="DoorArea" type="Area2D" parent="."]
position = Vector2( 1270.63, 85.3071 )

[node name="Polygon" type="Polygon2D" parent="DoorArea"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
polygon = PoolVector2Array( -4.06519, 323.673, -2.94275, -4.08566, 130.63, -32.1472, 128.385, 487.553 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
position = Vector2( 114.491, 214.39 )
shape = SubResource( 1 )

[node name="Character" parent="." instance=ExtResource( 1 )]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -1430.91, 595.969, -1430.91, 78.9514, 1450.98, 72.5947, 1453.1, 598.088, 1410.72, 598.057, 1266.64, 415.861, 823.782, 424.336, 791.998, 475.191, 722.164, 478.985, 607.651, 454.001, 213.531, 456.12, 158.439, 481.547, 87.0709, 486.685, 37.6606, 422.217, -1286.67, 430.693 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -1436.93, 596.354, 1450.97, 596.748, 1451.76, 603.097, -1437.56, 602.661 )
[connection signal="area_entered" from="DoorArea" to="." method="_on_DoorArea_area_entered"]
[connection signal="area_exited" from="DoorArea" to="." method="_on_DoorArea_area_exited"]
